--- a/ClientApp/src/app/components/manager-item-not-found/manager-item-not-found.component.html
+++ b/ClientApp/src/app/components/manager-item-not-found/manager-item-not-found.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <h1>You don’t have a {{itemName}} yet</h1>
-    <p>Create one to start managing events.</p>
+    <p>Create one?</p>
     <button mat-raised-button color="accent" class="create-venue-btn" (click)="createItem()">
-        <mat-icon>add</mat-icon> Create Venue
+        <mat-icon>add</mat-icon> Create {{itemName}}
     </button>
 </div>
