--- a/ClientApp/src/app/components/profile/profile.component.html
+++ b/ClientApp/src/app/components/profile/profile.component.html
@@ -20,6 +20,10 @@
             </button>
         </ng-container>
         <mat-divider></mat-divider>
+        <button mat-menu-item (click)="onViewProfile()">
+            <mat-icon fontIcon="edit"></mat-icon>
+            <span>View Profile</span>
+        </button>
         <button mat-menu-item (click)="onEditProfile()">
             <mat-icon fontIcon="edit"></mat-icon>
             <span>Edit Profile</span>
