--- a/ClientApp/src/app/pages/create-venue/create-venue.component.html
+++ b/ClientApp/src/app/pages/create-venue/create-venue.component.html
@@ -1,2 +1,2 @@
-<app-create-navbar (create)="createVenue()"></app-create-navbar>
+<app-create-navbar (create)="createChanges()"></app-create-navbar>
 <app-venue-details [venue]="venue" [editMode]="true"></app-venue-details>
