Commit Part 2 - Before accepting a listingApplication, venue manager will need to pay the artist manager they are accepting, which is now done fully through the website, and then an event will be fully created in the database

--- a/ClientApp/src/app/components/mailbox/mailbox.component.html
+++ b/ClientApp/src/app/components/mailbox/mailbox.component.html
@@ -8,7 +8,7 @@
             <mat-list-item *ngFor="let message of messages">
                 <div class="message-container">
                     <p class="message-text">{{ message.content }}</p>
-                    <button *ngIf="message.action" class="message-button primary" (click)="handleAction(message.action)">View</button>
+                    <button *ngIf="message.action" class="message-button primary" (click)="handleAction(message.action, message.actionId)">View</button>
                 </div>
             </mat-list-item>
         </mat-list>
