Created Search Component on customer main page to ease navigation
Refined the front end query params serialization and deserialization for the search functionality

--- a/ClientApp/src/app/components/location-search/location-search.component.html
+++ b/ClientApp/src/app/components/location-search/location-search.component.html
@@ -1,6 +1,6 @@
 <mat-form-field appearance="outline">
     <mat-label>Location</mat-label>
     <mat-icon matPrefix>location_on</mat-icon>
-    <input #search matInput placeholder="Anywhere">
+    <input #search matInput placeholder="Anywhere" [(ngModel)]="locationInput" >
 </mat-form-field>
   
