--- a/ClientApp/src/app/components/filter/filter.component.html
+++ b/ClientApp/src/app/components/filter/filter.component.html
@@ -5,7 +5,7 @@
       <div class="header-type" *ngIf="isCustomerRoute()">
         <mat-form-field appearance="outline" class="custom-select">
           <mat-label>Header Type</mat-label>
-          <mat-select [(value)]="headerType" (selectionChange)="onHeaderTypeChange()">
+          <mat-select [(value)]="searchParams.headerType" (selectionChange)="onHeaderTypeChange()">
             <mat-option *ngFor="let type of headerTypes" [value]="type">
               {{ type }}
             </mat-option>
@@ -13,7 +13,7 @@
         </mat-form-field>
       </div>
   
-      <div class="genre-selection" *ngIf="headerType === 'artist' || headerType === 'event'">
+      <div class="genre-selection" *ngIf="searchParams.headerType === 'artist' || searchParams.headerType === 'event'">
         <mat-form-field appearance="outline" class="custom-select">
           <mat-label>Select Genre</mat-label>
           <mat-select [(value)]="selectedGenre">
@@ -49,8 +49,8 @@
             (change)="onDistanceChange()">
             <input matSliderThumb [(ngModel)]="selectedDistance" [disabled]="!locationSelected">
           </mat-slider>
+          <span *ngIf="locationSelected">{{ selectedDistance }} km</span>
         </div>
-        <span *ngIf="locationSelected">{{ selectedDistance }} km</span>
       </div>
 
       <div class="order-selection">
