--- a/ClientApp/src/app/components/navbar/navbar.component.html
+++ b/ClientApp/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="container">
-    <img class="app-logo" src="" alt="app-logo" (click)="onLogoClick()">
+    <img class="app-logo" src="../images/logo.png" alt="app-logo" (click)="onLogoClick()">
     <div class = "content">
         <ul>
             <ng-content></ng-content>
