--- a/ClientApp/src/app/components/navbar/navbar.component.scss
+++ b/ClientApp/src/app/components/navbar/navbar.component.scss
@@ -1,13 +1,13 @@
 .container {
     display: flex;
     justify-content: space-between;
-    background-color: #f8f9fa;
+    background-color: #a0c4ff;
     align-items: center;
     padding: 0 10px;
 }
 
 nav img {
-    width: 50px;
+    width: 80px;
 }
 
 .content {
