--- a/ClientApp/src/app/components/search/search.component.scss
+++ b/ClientApp/src/app/components/search/search.component.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     padding: 20px;
     max-width: 1000px;
-    margin: 0 auto;
+    margin: 20px auto;
     background: white;
     border-radius: 50px; /* Rounded edges */
     border: 1px solid #ddd;
