--- a/ClientApp/src/app/pages/venue-home/venue-home.component.html
+++ b/ClientApp/src/app/pages/venue-home/venue-home.component.html
@@ -1,3 +1,3 @@
-<app-customer-navbar></app-customer-navbar>
+<app-venue-navbar></app-venue-navbar>
 <app-breadcrumb></app-breadcrumb>
 <router-outlet></router-outlet>
