--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -1,7 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { 
+    margin: 0; 
+    font-family: Roboto, "Helvetica Neue", sans-serif; 
+}
 
 button.primary {
     padding: 8px 16px;
@@ -11,3 +14,9 @@ button.primary {
     border-radius: 4px;
     cursor: pointer;
 }
+
+:root {
+    --mat-sys-background: #ffffff !important; 
+}
+  
+
