Setyling revamping and review component

--- a/ClientApp/src/app/components/config-navbar/config-navbar.component.scss
+++ b/ClientApp/src/app/components/config-navbar/config-navbar.component.scss
@@ -12,3 +12,15 @@
     list-style-type: none;
 }
 
+.btn-save {
+    background-color: var(--secondary-color);
+}
+
+.btn-edit {
+    background-color: var(--tertiary-color);
+}
+
+.btn-cancel {
+    background-color: var(--tertiary-color);
+}
+
