--- a/ClientApp/src/app/components/date-picker/date-picker.component.html
+++ b/ClientApp/src/app/components/date-picker/date-picker.component.html
@@ -3,9 +3,10 @@
     <input
       matInput
       [matDatepicker]="picker"
+      [value]="date"
       placeholder="MM/DD/YYYY"
       (dateChange)="onDateChange($event)"
     >
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
-  </mat-form-field>
+</mat-form-field>
