--- a/ClientApp/src/app/components/mailbox/mailbox.component.scss
+++ b/ClientApp/src/app/components/mailbox/mailbox.component.scss
@@ -32,3 +32,11 @@
     flex-shrink: 0; 
     white-space: nowrap; 
 }
+
+.mail-icon {
+    font-size: 30px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
