--- a/ClientApp/src/app/components/profile/profile.component.scss
+++ b/ClientApp/src/app/components/profile/profile.component.scss
@@ -20,3 +20,11 @@
     font-size: 14px;
     color: #666;
 }
+
+.account-icon {
+    font-size: 35px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
