--- a/ClientApp/src/app/components/scrollspy/scrollspy.component.html
+++ b/ClientApp/src/app/components/scrollspy/scrollspy.component.html
@@ -1,7 +1,12 @@
-<nav class="container">
-    <ul>
-      <li *ngFor="let navItem of navItems">
-        <a [routerLink]="[]" [fragment]="navItem.fragment" [queryParams]="queryParams">{{ navItem.name }}</a>
-      </li>
-    </ul>
+<nav #nav class="container" [class.fixed]="isScrolled">
+  <ul>
+    <li *ngFor="let navItem of navItems">
+      <a [routerLink]="[]" 
+         [fragment]="navItem.fragment" 
+         [queryParams]="queryParams"
+         [class.active]="activeFragment === navItem.fragment">
+        {{ navItem.name }}
+      </a>
+    </li>
+  </ul>
 </nav>
