Some refinements and bugfixes

--- a/ClientApp/src/app/components/config/google-maps/google-maps.component.html
+++ b/ClientApp/src/app/components/config/google-maps/google-maps.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <!-- Search Bar -->
     <div *ngIf="editMode">
-        <app-location-search (locationChange)="onLocationChange($event)" [type]="'establishment'"/>
+        <app-location-search (locationValueChange)="onLocationValueChange($event)" (locationChange)="onLocationChange($event)" [type]="'establishment'"/>
     </div>
 
     <!-- Google Map -->
