--- a/ClientApp/src/app/components/config/textarea/textarea.component.scss
+++ b/ClientApp/src/app/components/config/textarea/textarea.component.scss
@@ -1,9 +1,7 @@
+:host {
+    width: 100%;
+}
+
 .container {
-    display: block;
-    margin-top: 16px;
-    margin-bottom: 16px;
-    
-    .label {
-        margin-right: 5px;
-    }
+    width: 100%;
 }
