--- a/ClientApp/src/app/pages/venue-details/venue-details.component.scss
+++ b/ClientApp/src/app/pages/venue-details/venue-details.component.scss
@@ -11,3 +11,11 @@
 input, textarea {
     display: block;
 }
+
+.wrapper {
+    display: flex; /* Enables side-by-side alignment */
+    align-items: flex-start; /* Aligns items at the top */
+    gap: 20px; /* Adds spacing between textarea and image */
+    margin-top: 16px;
+    width: 100%
+}
