--- a/ClientApp/src/app/components/profile/profile.component.html
+++ b/ClientApp/src/app/components/profile/profile.component.html
@@ -21,11 +21,11 @@
         </ng-container>
         <mat-divider></mat-divider>
         <button mat-menu-item (click)="onViewProfile()">
-            <mat-icon fontIcon="edit"></mat-icon>
+            <mat-icon>visibility</mat-icon>
             <span>View Profile</span>
         </button>
         <button mat-menu-item (click)="onEditProfile()">
-            <mat-icon fontIcon="edit"></mat-icon>
+            <mat-icon>edit</mat-icon>
             <span>Edit Profile</span>
         </button>
         <button mat-menu-item (click)="onLogOut()">
