--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -29,7 +29,7 @@
     --button-cancel: var(--neutral-gray); /* Softer neutral (Cancel) */
     --button-danger: var(--error-color); /* Red for dangerous actions */
 
-    --background-light: #F6F6F6;
+    --background-light: #f5f5f5;
     --background-white: #FFFFFF;
 }
 
